# sickmind

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: main.cpp
debugutils/: CMakeLists.txt
debugutils/include/debug/: Assert.h  Log.h  Trace.h
debugutils/src/: Log.cpp  Trace.cpp
libs/: CMakeLists.txt
libs/icu/: CMakeLists.txt
libs/patches/: freetype.patch  harfbuzz.patch
scripts/: apply-patches.sh  make-patches.sh
src/: .clang-tidy  CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/debugutils/: CMakeLists.txt
src/debugutils/include/debug/: Assert.h  Stopwatch.h  Trace.h
src/debugutils/src/: Stopwatch.cpp  Trace.cpp
