cmake_minimum_required(VERSION 3.22)
project(icuuc)

set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/icu/icu4c/source/common
    ${CMAKE_CURRENT_SOURCE_DIR}/icu/icu4c/source/stubdata
    ${CMAKE_CURRENT_SOURCE_DIR}/icu/icu4c/source/common/unicode
)

set(ICU_INCLUDE_DIR ${INCLUDE_DIRS} PARENT_SCOPE)
set(ICU_LIBRARY ${PROJECT_NAME} PARENT_SCOPE)

add_library(${PROJECT_NAME}
    icu/icu4c/source/common/appendable.cpp
    icu/icu4c/source/common/bmpset.cpp
    icu/icu4c/source/common/brkeng.cpp
    icu/icu4c/source/common/brkiter.cpp
    icu/icu4c/source/common/bytesinkutil.cpp
    icu/icu4c/source/common/bytestream.cpp
    icu/icu4c/source/common/bytestrie.cpp
    icu/icu4c/source/common/bytestriebuilder.cpp
    icu/icu4c/source/common/bytestrieiterator.cpp
    icu/icu4c/source/common/caniter.cpp
    icu/icu4c/source/common/characterproperties.cpp
    icu/icu4c/source/common/chariter.cpp
    icu/icu4c/source/common/charstr.cpp
    icu/icu4c/source/common/cmemory.cpp
    icu/icu4c/source/common/cstr.cpp
    icu/icu4c/source/common/cstring.cpp
    icu/icu4c/source/common/cwchar.cpp
    icu/icu4c/source/common/dictbe.cpp
    icu/icu4c/source/common/dictionarydata.cpp
    icu/icu4c/source/common/dtintrv.cpp
    icu/icu4c/source/common/edits.cpp
    icu/icu4c/source/common/emojiprops.cpp
    icu/icu4c/source/common/errorcode.cpp
    icu/icu4c/source/common/filteredbrk.cpp
    icu/icu4c/source/common/filterednormalizer2.cpp
    icu/icu4c/source/common/icudataver.cpp
    icu/icu4c/source/common/icuplug.cpp
    icu/icu4c/source/common/loadednormalizer2impl.cpp
    icu/icu4c/source/common/localebuilder.cpp
    icu/icu4c/source/common/localematcher.cpp
    icu/icu4c/source/common/localeprioritylist.cpp
    icu/icu4c/source/common/locavailable.cpp
    icu/icu4c/source/common/locbased.cpp
    icu/icu4c/source/common/locdispnames.cpp
    icu/icu4c/source/common/locdistance.cpp
    icu/icu4c/source/common/locdspnm.cpp
    icu/icu4c/source/common/locid.cpp
    icu/icu4c/source/common/loclikely.cpp
    icu/icu4c/source/common/loclikelysubtags.cpp
    icu/icu4c/source/common/locmap.cpp
    icu/icu4c/source/common/locresdata.cpp
    icu/icu4c/source/common/locutil.cpp
    icu/icu4c/source/common/lsr.cpp
    icu/icu4c/source/common/lstmbe.cpp
    icu/icu4c/source/common/messagepattern.cpp
    icu/icu4c/source/common/normalizer2.cpp
    icu/icu4c/source/common/normalizer2impl.cpp
    icu/icu4c/source/common/normlzr.cpp
    icu/icu4c/source/common/parsepos.cpp
    icu/icu4c/source/common/patternprops.cpp
    icu/icu4c/source/common/pluralmap.cpp
    icu/icu4c/source/common/propname.cpp
    icu/icu4c/source/common/propsvec.cpp
    icu/icu4c/source/common/punycode.cpp
    icu/icu4c/source/common/putil.cpp
    icu/icu4c/source/common/rbbi.cpp
    icu/icu4c/source/common/rbbi_cache.cpp
    icu/icu4c/source/common/rbbidata.cpp
    icu/icu4c/source/common/rbbinode.cpp
    icu/icu4c/source/common/rbbirb.cpp
    icu/icu4c/source/common/rbbiscan.cpp
    icu/icu4c/source/common/rbbisetb.cpp
    icu/icu4c/source/common/rbbistbl.cpp
    icu/icu4c/source/common/rbbitblb.cpp
    icu/icu4c/source/common/resbund.cpp
    icu/icu4c/source/common/resbund_cnv.cpp
    icu/icu4c/source/common/resource.cpp
    icu/icu4c/source/common/restrace.cpp
    icu/icu4c/source/common/ruleiter.cpp
    icu/icu4c/source/common/schriter.cpp
    icu/icu4c/source/common/serv.cpp
    icu/icu4c/source/common/servlk.cpp
    icu/icu4c/source/common/servlkf.cpp
    icu/icu4c/source/common/servls.cpp
    icu/icu4c/source/common/servnotf.cpp
    icu/icu4c/source/common/servrbf.cpp
    icu/icu4c/source/common/servslkf.cpp
    icu/icu4c/source/common/sharedobject.cpp
    icu/icu4c/source/common/simpleformatter.cpp
    icu/icu4c/source/common/static_unicode_sets.cpp
    icu/icu4c/source/common/stringpiece.cpp
    icu/icu4c/source/common/stringtriebuilder.cpp
    icu/icu4c/source/common/uarrsort.cpp
    icu/icu4c/source/common/ubidi.cpp
    icu/icu4c/source/common/ubidi_props.cpp
    icu/icu4c/source/common/ubidiln.cpp
    icu/icu4c/source/common/ubiditransform.cpp
    icu/icu4c/source/common/ubidiwrt.cpp
    icu/icu4c/source/common/ubrk.cpp
    icu/icu4c/source/common/ucase.cpp
    icu/icu4c/source/common/ucasemap.cpp
    icu/icu4c/source/common/ucasemap_titlecase_brkiter.cpp
    icu/icu4c/source/common/ucat.cpp
    icu/icu4c/source/common/uchar.cpp
    icu/icu4c/source/common/ucharstrie.cpp
    icu/icu4c/source/common/ucharstriebuilder.cpp
    icu/icu4c/source/common/ucharstrieiterator.cpp
    icu/icu4c/source/common/uchriter.cpp
    icu/icu4c/source/common/ucln_cmn.cpp
    icu/icu4c/source/common/ucmndata.cpp
    icu/icu4c/source/common/ucnv.cpp
    icu/icu4c/source/common/ucnv2022.cpp
    icu/icu4c/source/common/ucnv_bld.cpp
    icu/icu4c/source/common/ucnv_cb.cpp
    icu/icu4c/source/common/ucnv_cnv.cpp
    icu/icu4c/source/common/ucnv_ct.cpp
    icu/icu4c/source/common/ucnv_err.cpp
    icu/icu4c/source/common/ucnv_ext.cpp
    icu/icu4c/source/common/ucnv_io.cpp
    icu/icu4c/source/common/ucnv_lmb.cpp
    icu/icu4c/source/common/ucnv_set.cpp
    icu/icu4c/source/common/ucnv_u16.cpp
    icu/icu4c/source/common/ucnv_u32.cpp
    icu/icu4c/source/common/ucnv_u7.cpp
    icu/icu4c/source/common/ucnv_u8.cpp
    icu/icu4c/source/common/ucnvbocu.cpp
    icu/icu4c/source/common/ucnvdisp.cpp
    icu/icu4c/source/common/ucnvhz.cpp
    icu/icu4c/source/common/ucnvisci.cpp
    icu/icu4c/source/common/ucnvlat1.cpp
    icu/icu4c/source/common/ucnvmbcs.cpp
    icu/icu4c/source/common/ucnvscsu.cpp
    icu/icu4c/source/common/ucnvsel.cpp
    icu/icu4c/source/common/ucol_swp.cpp
    icu/icu4c/source/common/ucptrie.cpp
    icu/icu4c/source/common/ucurr.cpp
    icu/icu4c/source/common/udata.cpp
    icu/icu4c/source/common/udatamem.cpp
    icu/icu4c/source/common/udataswp.cpp
    icu/icu4c/source/common/uenum.cpp
    icu/icu4c/source/common/uhash.cpp
    icu/icu4c/source/common/uhash_us.cpp
    icu/icu4c/source/common/uidna.cpp
    icu/icu4c/source/common/uinit.cpp
    icu/icu4c/source/common/uinvchar.cpp
    icu/icu4c/source/common/uiter.cpp
    icu/icu4c/source/common/ulist.cpp
    icu/icu4c/source/common/uloc.cpp
    icu/icu4c/source/common/uloc_keytype.cpp
    icu/icu4c/source/common/uloc_tag.cpp
    icu/icu4c/source/common/umapfile.cpp
    icu/icu4c/source/common/umath.cpp
    icu/icu4c/source/common/umutablecptrie.cpp
    icu/icu4c/source/common/umutex.cpp
    icu/icu4c/source/common/unames.cpp
    icu/icu4c/source/common/unifiedcache.cpp
    icu/icu4c/source/common/unifilt.cpp
    icu/icu4c/source/common/unifunct.cpp
    icu/icu4c/source/common/uniset.cpp
    icu/icu4c/source/common/uniset_closure.cpp
    icu/icu4c/source/common/uniset_props.cpp
    icu/icu4c/source/common/unisetspan.cpp
    icu/icu4c/source/common/unistr.cpp
    icu/icu4c/source/common/unistr_case.cpp
    icu/icu4c/source/common/unistr_case_locale.cpp
    icu/icu4c/source/common/unistr_cnv.cpp
    icu/icu4c/source/common/unistr_props.cpp
    icu/icu4c/source/common/unistr_titlecase_brkiter.cpp
    icu/icu4c/source/common/unorm.cpp
    icu/icu4c/source/common/unormcmp.cpp
    icu/icu4c/source/common/uobject.cpp
    icu/icu4c/source/common/uprops.cpp
    icu/icu4c/source/common/ures_cnv.cpp
    icu/icu4c/source/common/uresbund.cpp
    icu/icu4c/source/common/uresdata.cpp
    icu/icu4c/source/common/usc_impl.cpp
    icu/icu4c/source/common/uscript.cpp
    icu/icu4c/source/common/uscript_props.cpp
    icu/icu4c/source/common/uset.cpp
    icu/icu4c/source/common/uset_props.cpp
    icu/icu4c/source/common/usetiter.cpp
    icu/icu4c/source/common/ushape.cpp
    icu/icu4c/source/common/usprep.cpp
    icu/icu4c/source/common/ustack.cpp
    icu/icu4c/source/common/ustr_cnv.cpp
    icu/icu4c/source/common/ustr_titlecase_brkiter.cpp
    icu/icu4c/source/common/ustr_wcs.cpp
    icu/icu4c/source/common/ustrcase.cpp
    icu/icu4c/source/common/ustrcase_locale.cpp
    icu/icu4c/source/common/ustrenum.cpp
    icu/icu4c/source/common/ustrfmt.cpp
    icu/icu4c/source/common/ustring.cpp
    icu/icu4c/source/common/ustrtrns.cpp
    icu/icu4c/source/common/utext.cpp
    icu/icu4c/source/common/utf_impl.cpp
    icu/icu4c/source/common/util.cpp
    icu/icu4c/source/common/util_props.cpp
    icu/icu4c/source/common/utrace.cpp
    icu/icu4c/source/common/utrie.cpp
    icu/icu4c/source/common/utrie2.cpp
    icu/icu4c/source/common/utrie2_builder.cpp
    icu/icu4c/source/common/utrie_swap.cpp
    icu/icu4c/source/common/uts46.cpp
    icu/icu4c/source/common/utypes.cpp
    icu/icu4c/source/common/uvector.cpp
    icu/icu4c/source/common/uvectr32.cpp
    icu/icu4c/source/common/uvectr64.cpp
    icu/icu4c/source/common/wintz.cpp
    icu/icu4c/source/stubdata/stubdata.cpp
)

target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})

target_compile_definitions(${PROJECT_NAME} PUBLIC
    U_STATIC_IMPLEMENTATION
    U_COMMON_IMPLEMENTATION
)

set_target_properties(${PROJECT_NAME} PROPERTIES ${TARGET_PROPERTIES})
